--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </a>
     </header>
     <nav class="navegacion">
-        <a class="navegacion__enlaces"  href="#">Tienda</a>
-        <a class="navegacion__enlaces"  href="#">Nosotros</a>
+        <a class="navegacion__enlaces"  href="index.html">Tienda</a>
+        <a class="navegacion__enlaces"  href="nosotros.html">Nosotros</a>
     </nav>
     <div class="contenedornav">
         <nav class="navegacion-responsive">
@@ -26,9 +26,144 @@
             <label for="check" class="boton">Menu
                 <i class="fa-solid fa-shop"></i>
             </label>
-            <a class="navegacion-responsive__enlaces"  href="#">Tienda</a>
-            <a class="navegacion-responsive__enlaces"  href="#">Nosotros</a>
+            <a class="navegacion-responsive__enlaces"  href="index.html">Tienda</a>
+            <a class="navegacion-responsive__enlaces"  href="nosotros.html">Nosotros</a>
         </nav>
     </div>
+    <main class="contenedor">
+        <h2>Nuestros Productos</h2>
+             <div class="grid">
+                 <div class="productos">
+                   <a href="producto.html">
+                     <img class="productos__imagen" src="img/1.jpg" alt="imagen remera">
+                        <div class="producto__informacion">
+                            <p class="producto__nombre">VueJs</p>
+                            <p class="producto__precio">$2500</p>
+                        </div>
+                   </a>
+                 </div> <!--Fin de producto-->
+                 <div class="productos">
+                    <a href="producto.html">
+                      <img class="productos__imagen" src="img/2.jpg" alt="imagen remera">
+                         <div class="producto__informacion">
+                             <p class="producto__nombre">AngularJs</p>
+                             <p class="producto__precio">$2500</p>
+                         </div>
+                    </a>
+                  </div> <!--Fin de producto-->
+                  <div class="productos">
+                    <a href="producto.html">
+                      <img class="productos__imagen" src="img/3.jpg" alt="imagen remera">
+                         <div class="producto__informacion">
+                             <p class="producto__nombre">React</p>
+                             <p class="producto__precio">$2500</p>
+                         </div>
+                    </a>
+                  </div> <!--Fin de producto-->
+                  <div class="productos">
+                    <a href="producto.html">
+                      <img class="productos__imagen" src="img/4.jpg" alt="imagen remera">
+                         <div class="producto__informacion">
+                             <p class="producto__nombre">Readux</p>
+                             <p class="producto__precio">$2500</p>
+                         </div>
+                    </a>
+                  </div> <!--Fin de producto-->
+                  <div class="productos">
+                    <a href="producto.html">
+                      <img class="productos__imagen" src="img/5.jpg" alt="imagen remera">
+                         <div class="producto__informacion">
+                             <p class="producto__nombre">Node</p>
+                             <p class="producto__precio">$2500</p>
+                         </div>
+                    </a>
+                  </div> <!--Fin de producto-->
+                  <div class="productos">
+                    <a href="producto.html">
+                      <img class="productos__imagen" src="img/6.jpg" alt="imagen remera">
+                         <div class="producto__informacion">
+                             <p class="producto__nombre">Sass</p>
+                             <p class="producto__precio">$2500</p>
+                         </div>
+                    </a>
+                  </div> <!--Fin de producto-->
+                  <div class="productos">
+                    <a href="producto.html">
+                      <img class="productos__imagen" src="img/7.jpg" alt="imagen remera">
+                         <div class="producto__informacion">
+                             <p class="producto__nombre">Html</p>
+                             <p class="producto__precio">$2500</p>
+                         </div>
+                    </a>
+                  </div> <!--Fin de producto-->
+                  <div class="productos">
+                    <a href="producto.html">
+                      <img class="productos__imagen" src="img/8.jpg" alt="imagen remera">
+                         <div class="producto__informacion">
+                             <p class="producto__nombre">GitHub</p>
+                             <p class="producto__precio">$2500</p>
+                         </div>
+                    </a>
+                  </div> <!--Fin de producto-->
+                  <div class="productos">
+                    <a href="producto.html">
+                      <img class="productos__imagen" src="img/9.jpg" alt="imagen remera">
+                         <div class="producto__informacion">
+                             <p class="producto__nombre">Bulma</p>
+                             <p class="producto__precio">$2500</p>
+                         </div>
+                    </a>
+                  </div> <!--Fin de producto-->
+                  <div class="productos">
+                    <a href="producto.html">
+                      <img class="productos__imagen" src="img/10.jpg" alt="imagen remera">
+                         <div class="producto__informacion">
+                             <p class="producto__nombre">TypeScript</p>
+                             <p class="producto__precio">$2500</p>
+                         </div>
+                    </a>
+                  </div> <!--Fin de producto-->
+                  <div class="productos">
+                    <a href="producto.html">
+                      <img class="productos__imagen" src="img/11.jpg" alt="imagen remera">
+                         <div class="producto__informacion">
+                             <p class="producto__nombre">Drupal</p>
+                             <p class="producto__precio">$2500</p>
+                         </div>
+                    </a>
+                  </div> <!--Fin de producto-->
+                  <div class="productos">
+                    <a href="producto.html">
+                      <img class="productos__imagen" src="img/12.jpg" alt="imagen remera">
+                         <div class="producto__informacion">
+                             <p class="producto__nombre">JavaScript</p>
+                             <p class="producto__precio">$2500</p>
+                         </div>
+                    </a>
+                  </div> <!--Fin de producto-->
+                  <div class="productos">
+                    <a href="producto.html">
+                      <img class="productos__imagen" src="img/13.jpg" alt="imagen remera">
+                         <div class="producto__informacion">
+                             <p class="producto__nombre">GraphQl</p>
+                             <p class="producto__precio">$2500</p>
+                         </div>
+                    </a>
+                  </div> <!--Fin de producto-->
+                  <div class="productos">
+                    <a href="producto.html">
+                      <img class="productos__imagen" src="img/14.jpg" alt="imagen remera">
+                         <div class="producto__informacion">
+                             <p class="producto__nombre">WordPress</p>
+                             <p class="producto__precio">$2500</p>
+                         </div>
+                    </a>
+                  </div> <!--Fin de producto-->
+             </div>
+    </main>
+
+    <footer class="foot">
+        <h3 class="foot__titulo">Shop Online -Todos los derechos reservados 2022</h3>
+    </footer>
 </body>
 </html>
