--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="contenedornav">
         <nav class="navegacion-responsive">
             <input type="checkbox" id="check">
-            <label for="check" class="boton">Menu
+            <label for="check" class="boton">
                 <i class="fa-solid fa-shop"></i>
             </label>
             <a class="navegacion-responsive__enlaces"  href="index.html">Tienda</a>
