--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
                          </div>
                     </a>
                   </div> <!--Fin de producto-->
+                  <div class="graficos graficos--remeras"></div>
+                  <div class="graficos graficos--node"></div>
              </div>
     </main>
 
