--- a/nosotros.html
+++ b/nosotros.html
@@ -20,18 +20,15 @@
         <a class="navegacion__enlaces"  href="index.html">Tienda</a>
         <a class="navegacion__enlaces"  href="nosotros.html">Nosotros</a>
     </nav>
-    <div class="contenedornav">
-        <nav class="navegacion-responsive">
-            <input type="checkbox" id="check">
-            <label for="check" class="boton">Menu
-                <i class="fa-solid fa-shop"></i>
-            </label>
-            <a class="navegacion-responsive__enlaces"  href="index.html">Tienda</a>
-            <a class="navegacion-responsive__enlaces"  href="nosotros.html">Nosotros</a>
-        </nav>
-    </div>
     <main class="contenedor">
         <h2>Nosotros</h2>
+        <div class="nosotros">
+            <div class="nosotros__contenido">
+               <p>Lorem ipsum porro provident scumque a labore? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, velit inventore ipsa ducimus officiis fugiat sapiente perspiciatis itaque architecto voluptatem perferendis quibusdam, magni error! Asperiores quisquam cupiditate ratione inventore quibusdam.</p>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum molestiae iste consectetur necessitatibus dolores vitae? Odio earum ullam doloremque beatae fuga perspiciatis est doloribus architecto magnam praesentium! Quaerat, aspernatur!</p>
+            </div>
+            <img class="nosotros__imagen" src="img/nosotros.jpg" alt="imagen nosotros">
+        </div>
     </main>
 
     <footer class="foot">
