--- a/nosotros.html
+++ b/nosotros.html
@@ -30,6 +30,39 @@
             <img class="nosotros__imagen" src="img/nosotros.jpg" alt="imagen nosotros">
         </div>
     </main>
+    <section class="contenedor compras">
+        <h2 class="contenedor__titulo">¿Porque comprar con nosotros?</h2>
+        <div class="bloques">
+            <div class="bloque">
+                <h3 class="bloque__titulo">El mejor precio</h3>
+                <img class="bloque__imagen" src="img/icono_1.png" alt="Mejor precio">
+                <p class="bloque__texto">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum molestiae iste
+                </p>
+            </div> <!--fin de bloque-->
+            <div class="bloque">
+                <h3 class="bloque__titulo">Para Devs</h3>
+                <img class="bloque__imagen" src="img/icono_2.png" alt="Mejor precio">
+                <p class="bloque__texto">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum molestiae iste
+                </p>
+            </div> <!--fin de bloque-->
+            <div class="bloque">
+                <h3 class="bloque__titulo">Envio Gratis</h3>
+                <img class="bloque__imagen" src="img/icono_3.png" alt="Mejor precio">
+                <p class="bloque__texto">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum molestiae iste
+                </p>
+            </div> <!--fin de bloque-->
+            <div class="bloque">
+                <h3 class="bloque__titulo">La mejor calidad</h3>
+                <img class="bloque__imagen" src="img/icono_4.png" alt="Mejor precio">
+                <p class="bloque__texto">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum molestiae iste
+                </p>
+            </div> <!--fin de bloque-->
+        </div>
+    </section>
 
     <footer class="foot">
         <h3 class="foot__titulo">Shop Online -Todos los derechos reservados 2022</h3>
